# QuizApp_Programming_Part2

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
quiz_app/: __main__.py  application.py
quiz_app/data_access/: dao.py  db.py  seed.py
quiz_app/domain/: models.py
quiz_app/services/: attempt_service.py  certificate_service.py  grading_service.py  question_service.py
quiz_app/ui/: controllers.py  pages.py
tests/: conftest.py  test_db.py  test_integration.py  test_unit.py
