[project]
name = "quiz-app"
version = "0.1.0"
description = "NiceGUI quiz application using OOP, ORM, and an MVC-inspired structure."
requires-python = ">=3.10"

dependencies = [
    "nicegui",
    "sqlmodel",
    "reportlab",
    "tzdata; sys_platform == 'win32'",
]

[tool.pytest.ini_options]
pythonpath = ["."]
